Created database, added unit and attributes tables, unit table has 4 units, attributes table has all attributes I can think of that would be useful at the moment

--- a/StarCraft2Calculator/mainForm.resx
+++ b/StarCraft2Calculator/mainForm.resx
@@ -120,6 +120,9 @@
   <metadata name="ttpInfo.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>38, 15</value>
   </metadata>
+  <metadata name="ttpInfo.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>38, 15</value>
+  </metadata>
   <data name="lAtkPerShotTextBox.ToolTip" xml:space="preserve">
     <value>Determines the number of attacks applied
 in a single shot (or burst) for the unit's ground
@@ -181,4 +184,16 @@ with +1 armor will decrease the damage of each
 attack by 1, returning the total damage to 16 for
 a Zealot with +1 weapon upgrades.</value>
   </data>
+  <metadata name="unitDataDataSet.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>127, 15</value>
+  </metadata>
+  <metadata name="attTableTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>268, 15</value>
+  </metadata>
+  <metadata name="tableAdapterManager.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>437, 15</value>
+  </metadata>
+  <metadata name="tableTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>608, 15</value>
+  </metadata>
 </root>
